--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@octokit/rest": "^22.0.0",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "@studio-freight/lenis": "^1.0.42",
+    "cloudinary": "^2.7.0",
     "gsap": "^3.13.0",
     "next": "15.5.3",
     "react": "19.1.0",
