--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
+    "dev": "next dev",
     "start": "next start",
     "lint": "eslint"
   },
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.3.0",
     "@studio-freight/lenis": "^1.0.42",
     "cloudinary": "^2.7.0",
+    "geist": "^1.5.1",
     "gsap": "^3.13.0",
     "next": "15.5.3",
     "react": "19.1.0",
