--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "geist": "^1.5.1",
     "gsap": "^3.13.0",
     "next": "15.5.3",
+    "next-cloudinary": "^6.17.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sass": "^1.93.0",
